--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 200px;
 }
 .half-width{
     width: 50%;
@@ -32,4 +33,10 @@ section{
     background-image: url(./image/top-banner.png);
     background-repeat: no-repeat;
 
+}
+
+.dream-big{
+    background-image: url(./image/dream-bg.png) ;
+    background-repeat: no-repeat;
+    background-position: right;
 }
