--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{
     color: darkred;
 }
 
-section{
+.flexible-containter{
     display: flex;
     margin-bottom: 200px;
 }
@@ -39,4 +39,38 @@ section{
     background-image: url(./image/dream-bg.png) ;
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-item{
+
+    width: 40%;
+   margin-left:5% ;
+   margin-right: 5%;
+   padding-left: 10px; 
+   border-radius: 10px;
+   box-shadow: 10px 10px 40px gray;
+   
+}
+
+h2{
+    font-size: 40px;
+}
+.experience-area{
+    background-image: url(./image/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#web-dev-exp{
+    border-left: 7px solid ;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+#full-stack{
+    border-left: 7px solid ;
+    border-image: linear-gradient(rgba(255, 72, 0, 0.767),rgb(35, 156, 19));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
